--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+
+    <string name="title_activity_admin">Admin</string>
+    <string name="title_activity_crear_libro">Crear Libro</string>
+    <string name="title_activity_listado_libros">Listado Libros</string>
+
 </resources>
