--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="title_activity_admin">Admin</string>
     <string name="title_activity_crear_libro">Crear Libro</string>
     <string name="title_activity_listado_libros">Listado Libros</string>
+    <string name="title_activity_detalle_libro">Detalle Libro</string>
 
 </resources>
